- remove explicit import of dwrServices (jawr will include it) - should fix nonexistent bundle warnings - remove align : center for body which is messing up dropdowns

--- a/gemma-web/src/main/webapp/styles/antisense/layout.css
+++ b/gemma-web/src/main/webapp/styles/antisense/layout.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background: white top left repeat-x;
-	text-align: center;
+//	text-align: center;
 }
 
 div#page {
